--- a/4MenShop/css/thatlung.css
+++ b/4MenShop/css/thatlung.css
@@ -404,6 +404,7 @@ img.aonamicon2{
 }
 .producttext{
     text-transform: capitalize;
+    text-align: center;
     width: 100%;
     height: 24px;
     box-sizing: border-box;
